Updated the Galician translation.

--- a/po/wesnoth-lib/gl.po
+++ b/po/wesnoth-lib/gl.po
@@ -15,14 +15,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-22 07:00+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-07-08 03:04+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -3450,8 +3450,6 @@ msgid "Skip Animation"
 msgstr "Saltarse a animación"
 
 #: src/hotkeys.cpp:113
-#, fuzzy
-#| msgid "whiteboard^Planning Mode"
 msgid "Toggle Planning Mode"
 msgstr "Modo de planificación"
 
@@ -3460,30 +3458,22 @@ msgid "Execute Planned Action"
 msgstr "Executar a acción planificada"
 
 #: src/hotkeys.cpp:115
-#, fuzzy
-#| msgid "Execute Planned Action"
 msgid "Execute All Actions"
-msgstr "Executar a acción planificada"
+msgstr "Executar todas as accións"
 
 #: src/hotkeys.cpp:116
 msgid "Delete Planned Action"
 msgstr "Eliminar a acción planificada"
 
 #: src/hotkeys.cpp:117
-#, fuzzy
-#| msgid "whiteboard^Move Action Up"
 msgid "Move Action Up Queue"
 msgstr "Adiantar a acción"
 
 #: src/hotkeys.cpp:118
-#, fuzzy
-#| msgid "whiteboard^Move Action Down"
 msgid "Move Action Down Queue"
 msgstr "Atrasar a acción"
 
 #: src/hotkeys.cpp:119
-#, fuzzy
-#| msgid "whiteboard^Suppose Dead"
 msgid "Suppose Dead"
 msgstr "Dar por morto"
 
