--- a/po/wesnoth-low/gl.po
+++ b/po/wesnoth-low/gl.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-22 09:08+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-07-08 03:44+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.4\n"
@@ -2708,7 +2708,7 @@ msgid ""
 "Before Kalenz left the Ka’lian he had ordered $left_behind_kalenz to stay "
 "and guard it."
 msgstr ""
-"Antes de marchar do Cälian, Cälén ordenara a $left_behind quedarse e "
+"Antes de marchar do Cälian, Cälén ordenara a $left_behind_kalenz quedarse e "
 "protexela."
 
 #. [message]: speaker=narrator
@@ -5480,22 +5480,22 @@ msgstr ""
 #. [unit_type]: id=Elvish Horse Archer
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:13
 msgid "This is a stub!"
-msgstr ""
+msgstr "A descrición aínda non está lista."
 
 #. [unit_type]: id=Elvish Horse Archer
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:18
 msgid "Elvish Horse Archer"
-msgstr ""
+msgstr "Elfo arqueiro montado"
 
 #. [attack]: type=blade
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:22
 msgid "sword"
-msgstr ""
+msgstr "espada"
 
 #. [attack]: type=pierce
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:31
 msgid "bow"
-msgstr ""
+msgstr "arco"
 
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:10
