--- a/po/wesnoth-trow/gl.po
+++ b/po/wesnoth-trow/gl.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-22 09:54+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-07-08 03:42+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
@@ -5977,7 +5977,7 @@ msgid ""
 "the hand of Jevyan himself. We can’t have an illiterate orc or mindless "
 "skeleton getting the treaty. We will honor your sacrifice."
 msgstr ""
-"Moi ben, se tan decicido estás. Pero lembra, <i>debe</b> matarte o propio "
+"Moi ben, se tan decicido estás. Pero lembra, <i>debe</i> matarte o propio "
 "Llevian. Non podemos permitir que o tratado o colla un orco analfabeto ou un "
 "esqueleto descerebrado. Honraremos o teu sacrificio."
 
