--- a/po/wesnoth-manual/gl.po
+++ b/po/wesnoth-manual/gl.po
@@ -11,14 +11,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "POT-Creation-Date: 2012-01-22 14:59+0100\n"
-"PO-Revision-Date: 2012-05-22 09:46+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-07-08 03:09+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "com>\n"
@@ -2138,15 +2138,6 @@ msgstr "Adiantar a acción na cola."
 # type: Content of: <book><chapter><section><simpara>
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1307
-#, fuzzy
-#| msgid ""
-#| "Each side is given some amount of gold to begin with, and receives 2 gold "
-#| "pieces per turn, plus 2 more gold pieces for every village that side "
-#| "controls. In a campaign, starting gold is a minimum amount defined by the "
-#| "scenario, which is typically lower as the difficulty level increases. In "
-#| "addition you often get a percentage of gold to carry over from the last "
-#| "scenario played. The exact percentage depends on the scenario and is "
-#| "usually displayed as part of the scenario objectives."
 msgid ""
 "Each side is given some amount of gold to begin with, and receives 2 gold "
 "pieces per turn, plus 2 more gold pieces for every village that side "
@@ -2155,12 +2146,11 @@ msgid ""
 "scenario, which is typically lower as the difficulty level increases."
 msgstr ""
 "Cada bando comeza cunha certa cantidade de ouro, e recibe dúas moedas de "
-"ouro por rolda, máis outras dúas por cada vila que controle. Nunha campaña, "
-"o ouro inicial será unha cantidade mínima definida polo escenario, que "
-"adoita diminuír a medida que se aumenta o nivel de dificultade. "
-"Adicionalmente, adóitase recibir unha porcentaxe do ouro conseguido no "
-"escenario anterior. A porcentaxe concreta dependerá do escenario en "
-"concreto, e adoita amosarse como parte dos obxectivos do escenario."
+"ouro por rolda, máis outras dúas por cada vila que controle. Nas campañas, o "
+"ouro inicial será o meirande dos seguintes dous valores: (1) o 80% do ouro "
+"co que se acabou o escenario anterior, ou (2) unha cantidade mínima definida "
+"polo escenario, que adoita diminuír a medida que se aumenta o nivel de "
+"dificultade."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1313
