--- a/po/wesnoth-tsg/gl.po
+++ b/po/wesnoth-tsg/gl.po
@@ -11,15 +11,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-05-18 12:28+0200\n"
-"PO-Revision-Date: 2012-05-24 02:05+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-07-08 03:43+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
@@ -43,7 +43,6 @@ msgstr "Nivel principiante, 9 escenarios."
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:19
-#, fuzzy
 msgid ""
 "A young Knight, Deoran, is dispatched to take command of the South Guard... "
 "Note: This campaign is designed as an introduction to Wesnoth. The "
@@ -51,11 +50,10 @@ msgid ""
 "\n"
 msgstr ""
 "Un cabaleiro de curta idade, Déoran, recibe ordes de tomar o control da "
-"garda do sur.\n"
+"garda do sur. Nota: esta campaña está deseñada como unha introdución ao "
+"xogo. O nivel de dificultade «civil» está pensado para xente que xoga por "
+"vez primeira a A batalla polo Noroeste.\n"
 "\n"
-"Nota: esta campaña está deseñada como unha introdución ao xogo. O nivel de "
-"dificultade «civil» está pensado para xente que xoga por vez primeira a A "
-"batalla polo Noroeste."
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:22
@@ -2563,7 +2561,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:264
 msgid "Also, soldiers with the <i>quick</i> trait will be useful in the dark."
-msgstr "Ademais, os soldados <I>rápidos</i> serán útiles na escuridade."
+msgstr "Ademais, os soldados <i>rápidos</i> serán útiles na escuridade."
 
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:272
