--- a/po/wesnoth-utbs/gl.po
+++ b/po/wesnoth-utbs/gl.po
@@ -1,22 +1,24 @@
 # Galician translation of wesnoth-utbs
 #
-# Leandro Regueiro <leandro.regueiro@gmail.com>, 2007, 2008.
 #
 # Proxecto Trasno <http://trasno.net>
 #
+# Leandro Regueiro <leandro.regueiro@gmail.com>, 2007, 2008.
+# Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2009-07-13 16:23+0100\n"
-"Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
+"PO-Revision-Date: 2012-07-08 03:10+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Lokalize 1.4\n"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #. [editor_group]: id=utbs
@@ -72,11 +74,10 @@ msgstr "Roldador do deserto"
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:25
 msgid "(Expert level, 10 scenarios.)"
-msgstr ""
+msgstr "Nivel experto, 10 escenarios."
 
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:25
-#, fuzzy
 msgid ""
 "In the distant future a small band of elves struggles to survive amidst the "
 "ruins of fallen empires. Lead your people out of the desert on an epic "
@@ -87,7 +88,6 @@ msgstr ""
 "as ruínas de imperios caídos. Guía á túa xente fóra do deserto nunha viaxe "
 "épica para atopar un novo fogar.\n"
 "\n"
-"(Nivel experto, 11 escenarios, algúns en reconstrucción)\n"
 
 #. [about]
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:29
