--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -6,50 +6,21 @@
 # Proxecto Trasno <http://trasno.net>
 #
 # Leandro Regueiro <leandro.regueiro@gmail.com>, 2007-2009.
-# Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
 # Jacobo Abel Fernández García <xakobe_gz@hotmail.com>, 2007.
-# Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2009-2010.
-# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2010, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
+# Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
+# Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2009-2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-22 08:49+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-07-08 03:54+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"adriyetichaves@gmail.com>\n"
-"adriyetichaves@gmail.com>\n"
-"adriyetichaves@gmail.com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
-"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.4\n"
 
@@ -2139,6 +2110,7 @@ msgstr ""
 "Un cuarto menos de dano polo día.\n"
 "Un cuarto menos de dano pola noite."
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:23
@@ -2156,6 +2128,7 @@ msgstr ""
 "Ponte Nova,Ponte Romana,Ponte San Alberte,Ponte Serrapio,Ponte Sigüeiro,"
 "Ponte Taboada,Ponte Valga,Ponte Vella"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:24
@@ -2165,6 +2138,7 @@ msgstr ""
 "Camiño de $name,Camiño Primitivo de $name,Estrada de $name,Estrada Vella de "
 "$name"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:25
@@ -2193,12 +2167,14 @@ msgstr ""
 "Tronceda,Río Ulla,Río Umia,Río Vaa,Río Valiñas,Río Verdugo,Río de Vilaselán,"
 "Río Xallas,Río Xares,Río Xuliana"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:26
 msgid "$name Forest,$name|’s Forest"
 msgstr "Bosque $name,Bosque de $name,Fraga $name,Fraga de $name"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:27
@@ -2208,6 +2184,7 @@ msgstr ""
 "Lagoa de Cuns,Lagoa Sacra de Olives,Lagoas de Zo,Lago $name,Lago de $name,"
 "Lagoa $name,Lagoa de $name"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:28
@@ -2223,6 +2200,7 @@ msgstr ""
 "Valongo,Montes do Xalo,Pena Grande,Penedo dos Tres Reinos,Serra da Cova da "
 "Serpe,Serra de Meira,Serra do Candán,Serra do Galiñeiro,Tralomoredo"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:29
@@ -2232,6 +2210,7 @@ msgstr ""
 "Lameiro de $name,Marisma $name,Marisma de $name,Pantano $name,Pantano de "
 "$name"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:30
@@ -2262,6 +2241,7 @@ msgstr ""
 "Vilán,Vilanova,Vilaperre,Vilar,Vilas,Vilavedra,Vileira,Xacobe,Xesteira,Xocín,"
 "Xondo,Xunqueira,Zas"
 
+# ignore-interpolations: $name $lake
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:31
@@ -2273,6 +2253,7 @@ msgstr ""
 "Sandiás,Sarreaus,Seixas,Silleda,Sisoi,Sistallo,Támoga,Valdoviño,Vilapene,"
 "Vilar,Xermar,Xestoso,Xinzo,Xunqueira,Xustás,Zadagós"
 
+# ignore-interpolations: $name $river
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:32
@@ -2288,6 +2269,7 @@ msgstr ""
 "Rosal,Salvaterra,Sande,Sarria,Sigüeiro,Silleda,Tomiño,Triabá,Tui,Valga,"
 "Verdes,Vigo,Vila de Cruces,Vilanova,Zas"
 
+# ignore-interpolations: $name $river $bridge
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:33
@@ -2304,6 +2286,7 @@ msgstr ""
 "Rosal,Salvaterra,Sande,Sarria,Sigüeiro,Silleda,Tomiño,Triabá,Tui,Valga,"
 "Verdes,Vigo,Vila de Cruces,Vilanova,Zas"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:34
@@ -2312,6 +2295,7 @@ msgstr ""
 "A Goleta,A Pastoriza,Lalín,Lugo,Moraña,Narón,Ordes,Oroso,Pontevedra,Santa "
 "Comba,Santiago,Sarria,Sigüeiro,Silleda,Sobrado,Trazo,$name"
 
+# ignore-interpolations: $name $forest
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:35
@@ -2323,6 +2307,7 @@ msgstr ""
 "Carral,Coristanco,Cotobade,Faramontaos,Lugo,Monforte,Muimenta,Noia,Nóvoa,"
 "Oroso,Ourense,Salceda,Sigüeiro,Silleda,Vilar,Zas,$name"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:36
@@ -2332,6 +2317,7 @@ msgstr ""
 "Monforte,Poio,Rodeiro,Sarria,Seixo,Silleda,Soutomaior,Tomiño,Vilagarcía,"
 "Vilanova,$name"
 
+# ignore-interpolations: $mountain $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:37
@@ -2339,8 +2325,9 @@ msgid "$mountain|mont,$mountain|cliff,$mountain|bury,$mountain|ham"
 msgstr ""
 "Agolada,Baleira,Caldas,Castro Caldelas,Catoira,Lousame,Malpica,Meira,"
 "Monforte,Poio,Rodeiro,Sarria,Seixo,Silleda,Soutomaior,Tomiño,Vilagarcía,"
-"Vilanova,$name"
+"Vilanova,$mountain"
 
+# ignore-interpolations: $name
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:38
@@ -2351,6 +2338,7 @@ msgstr ""
 "Monforte,Poio,Rodeiro,Sarria,Seixo,Silleda,Soutomaior,Tomiño,Vilagarcía,"
 "Vilanova,$name"
 
+# ignore-interpolations: $name $road
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:39
@@ -2361,6 +2349,7 @@ msgstr ""
 "Monforte,Mos,Ourense,Padrón,Poio,Pontecesures,Pontevedra,Rábade,Redondela,"
 "Santiago,Tomiño,Tui,Valga,Vigo,Vilagarcía,$name"
 
+# ignore-interpolations: $name $swamp
 # Véxase o ficheiro de «Topónimos».
 #. [language]
 #: data/english.cfg:40
@@ -5341,16 +5330,11 @@ msgid "prompt^Command:"
 msgstr "Orde:"
 
 #: src/mouse_events.cpp:703
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "or recalls left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits "
 "left."
 msgstr ""
-"Non podes sacar ao líder da torre se planificaches recrutar ou reincorporar "
-"máis unidades."
+"Non podes sacar ao líder da torre se planificaches recrutar máis unidades."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
