--- a/po/wesnoth-l/gl.po
+++ b/po/wesnoth-l/gl.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-05-18 12:28+0200\n"
-"PO-Revision-Date: 2012-05-22 09:39+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-07-08 03:41+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "com>\n"
@@ -2452,7 +2452,7 @@ msgid ""
 msgstr ""
 "…unha desalentadora nota cravada nun poste carbonizado que rezaba: "
 "«<i>Baldrás, estarías orgulloso. Fixémolos tremer de medo. Pero non foi "
-"abondo</b>»."
+"abondo</i>»."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:40
