--- a/po/wesnoth-nr/gl.po
+++ b/po/wesnoth-nr/gl.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-05-18 12:28+0200\n"
-"PO-Revision-Date: 2012-05-22 09:15+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-07-08 03:41+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.4\n"
@@ -1813,7 +1813,7 @@ msgid ""
 "death! These tunnels, haunted by the ghosts of the dead dwarves of Knalga, "
 "are the domain of my power."
 msgstr ""
-"Quen son? (<i<bota unha risada</i>) Son Malifor “O grande”, mestre da morte! "
+"Quen son? (<i>bota unha risada</i>) Son Malifor “O grande”, mestre da morte! "
 "Nestes túneles, cheos de pantasmas dos ananos mortos de Neilga, reside o meu "
 "poder."
 
